# inline-poly-containers

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.claude/: settings.local.json
examples/: CMakeLists.txt  quickstart.cpp
examples/features/: copy_move_semantics.cpp  no_heap_demo.cpp  simd_alignment.cpp  vector_operations.cpp
examples/use_cases/: array_vs_vector.cpp  entity_component_system.cpp
include/: inline_poly.h
tests/: CMakeLists.txt  test_no_allocations.cpp  test_polymorphic_array.cpp  test_polymorphic_vector.cpp
